Remove /people/{crn}/risks
This endpoint is not being used
